css/style.css
*{
    padding: 0;
    margin: 0
}
#game{
    width: 5000px;
    height: 200px;
    border: 1px solid black;
}

#character{
    width: 20px;
    height: 50px;
    background-color: red;
    position: relative;
    top: 150px;
    animation: jump 500ms infinite;
}

.animate {
    animation: jump 500ms;
}

@keyframes jump{
    0%{top: 150px;}
    30%{top: 100px;}
    70%{top: 100px;}
    100%{top: 150px;}
}

#block {
    width: 20px;
    height: 20px;
    background-color: blue;
    position: relative;
    top: 130px;
    left: 400px;
    animation: block 1s infinite linear;
}

@keyframes block{
    0%{left: 480px;}
    100%{left: -40px;}
}

